--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.ads": "2.0.8",
     "com.unity.purchasing": "2.0.3",
-    "com.unity.cinemachine": "2.2.0"
+    "com.unity.cinemachine": "2.2.0",
+    "com.unity.textmeshpro": "1.2.4"
   }
 }
